samples/sample-anthos-multi-cloud/kubernetes-manifests/gateway-catdog.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: deployment-homepage
    labels:
      app.kubernetes.io/name: homepage
  spec:
    replicas: 3
    selector:
      matchLabels:
        app.kubernetes.io/name: homepage
    template:
      metadata:
        labels:
          app.kubernetes.io/name: homepage
      spec:
        containers:
        - name: homepage
          image: zzenonn/catdog-home:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "150m"
          ports:
          - containerPort: 80
    
    
---
  apiVersion: v1
  kind: Service
  metadata:
    name: service-homepage
    labels:
      app.kubernetes.io/name: homepage
  spec:
    selector:
      app.kubernetes.io/name: homepage
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    type: NodePort
---
  # Cat service
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: deployment-cat
    labels:
      app.kubernetes.io/name: cat-page
  spec:
    replicas: 3
    selector:
      matchLabels:
        app.kubernetes.io/name: cat-page
    template:
      metadata:
        labels:
          app.kubernetes.io/name: cat-page
      spec:
        containers:
        - name: cat
          image: zzenonn/catdog-cat:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "150m"
          ports:
          - containerPort: 80
---
  apiVersion: v1
  kind: Service
  metadata:
    name: service-cat
    labels:
      app.kubernetes.io/name: cat-page
  spec:
    selector:
      app.kubernetes.io/name: cat-page
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    type: NodePort
---
  # Dog service
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: deployment-dog
    labels:
      app.kubernetes.io/name: dog-page
  spec:
    replicas: 3
    selector:
      matchLabels:
        app.kubernetes.io/name: dog-page
    template:
      metadata:
        labels:
          app.kubernetes.io/name: dog-page
      spec:
        containers:
        - name: dog
          image: zzenonn/catdog-dog:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "150m"
          ports:
          - containerPort: 80
---
  apiVersion: v1
  kind: Service
  metadata:
    name: service-dog
    labels:
      app.kubernetes.io/name: dog-page
  spec:
    selector:
      app.kubernetes.io/name: dog-page
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    type: NodePort
---
  apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    name: gateway-catdog
    # annotations:
    #   networking.gke.io/certmap: store-example-com-map
  spec:
    gatewayClassName: gke-l7-global-external-managed
    listeners:
    - name: http
      protocol: HTTP
      port: 80
---
  apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    name: my-route
  spec:
    parentRefs:
    - name: gateway-catdog
    # hostnames:
    # - "example.com"
    rules:
    - matches:
      - path:
          value: /
      backendRefs:
      - name: service-homepage
        port: 80
    - matches:
      - path:
          value: /img
      backendRefs:
      - name: service-homepage
        port: 80
    - matches:
      - path:
          value: /dogs
      backendRefs:
      - name: service-dog
        port: 80
    - matches:
      - path:
          value: /cats
      backendRefs:
      - name: service-cat
        port: 80
